<resources>
    <string name="app_name">SXLib</string>
    <string name="search">书籍检索</string>
    <string name="my_book">我的借阅</string>
    <string name="login">登陆</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="search_hint">Search</string>
    <string name="search_setting">搜索规则</string>
    <string name="search_way">检索方式</string>
    <string name="sort_way">排序规则</string>
    <string name="sort_order">排序顺序</string>
    <string name="title">标题</string>
    <string name="author">作者</string>
    <string name="isbn">ISBN</string>
    <string name="asc">升序</string>
    <string name="desc">降序</string>
    <string name="score">匹配度</string>
    <string name="publish_date">出版时间</string>
    <string name="loan_count">借阅数</string>
    <string name="book_card_transition_name">book_card</string>
    <string name="book_summary">书籍简介</string>
    <string name="book_catalog">书籍目录</string>
    <string name="douban_rating">豆瓣评分</string>
    <string name="author_intro">作者信息</string>
    <string name="book_state">馆藏状态</string>
    <string name="no_book_state_info">暂无馆藏信息</string>
    <string name="test_author_intro">罗升阳，1984年出生，2007年毕业于浙江大学计算机系，取得学士学位，2010年毕业于上海交通大学计算机系，取得硕士学位。毕业后一直从事于互联网软件开发，并且致力于移动平台的研究，特别是对Android平台有深入的理解和研究。在国内知名IT技术社区CSDN上发表了数十篇高质量的Android系统原创性文章，并且开设博客专栏--《老罗的Android之旅》，积极与网友互动，深受大家喜爱，访问量一直居于前茅</string>
    <string name="test_long_content">作者：林二
链接：https://www.zhihu.com/question/25066075/answer/29992667
来源：知乎
著作权归作者所有，转载请联系作者获得授权。

一种相思，两样哀愁。


她和赵敏对张无忌的感情是一样的，只不过两人一个热烈，一个含蓄。所以才有了赵敏的“我偏要勉强”，和她这句“我若问心有愧呢？”只不过赵敏是幸运的，从小生活优渥，父亲又执掌朝廷兵马，自己在府中一干武士谋士中厮混，等到出场时，智商和情商可以算是倚天中第一了。周芷若则完全相反，她出生在汉水的一条渔船上，母亲早亡，父亲也被张无忌给克死了。孤苦伶仃地来到峨眉，以为能有个家，又摊上个有绝对控制欲的师父。我们看一下她长大后第一次出场：


只见这女郎腰间悬着一柄短剑，却不拔取兵刃，空手走近。丁敏君出声警告：“周师妹，这鬼丫头功夫邪门得紧。”那女郎点点头，斯斯文文的说道：“请问两位尊姓大名？因何伤我师姊？”自她走近之后，张无忌一直觉得她好生面熟，待得听到她说话，登时想起：“原来她便是在汉水中的船家小女孩周芷若姑娘。太师父携她上武当山去，如何却投入了峨嵋门下？”

..........

周芷若转眼瞧着丁敏君，意存询问。丁敏君怒道：“你带这两人去见师父，请她老人家发落便是。”周芷若道：“倘若这两位并未存心得罪师姐，以小妹之见，不如一笑而罢，化敌为友。”丁敏君大怒，喝道：“甚么？你反而相助外人？”..............................

可是周芷若对丁敏君却极是尊敬，躬身道：“小妹听由师姐吩咐，不敢有违。”丁敏君道：“好，你去将这臭丫头拿下，把她双手也打折了。”周芷若道：“是，请师姐给小妹掠阵照应。”转身向那村女道：“小妹无礼，想请教姐姐的高招。”

完全就是一个受气小媳妇的形象，可见她这些年在峨眉专心练功，对人情世故所知甚少，又长期在灭绝的淫威之下，没什么个人思想。从张无忌手里接过倚天剑，灭绝让她刺就刺了。完完全全一个单纯的姑娘啊。张无忌在她生活中再次出现，为她平淡的生活打开了一扇窗，不见阳光的她终于羞答答地开出了花。我想，如果没有赵敏在其中的话，周芷若就是第二个纪晓芙啊。（瞬间觉得灭绝的教育方式失败透顶，灭性绝情的师父居然教出了两个敢爱敢恨的女子。）这时她对张无忌的感情还是压抑的，只敢在无人注意的时候偷偷望一眼。直到灭绝死后，她的生活才绽放了光彩。可是这时候已经晚了，内有灭绝阴魂不散，外有赵敏横刀夺爱。可怜的周姑娘不知所措，随波逐流之下，最终落个因爱生恨。


在看倚天屠龙记的时候，我对周的感情是很复杂的。先是心动，后是怜惜，再后来是厌恶，直到她说出这句话，之前对她所有的讨厌统统不见了，之后无论她做什么都不会改变我对她的感情，因为这个时候她与赵敏在我心中占了同等位置。这个时候的周芷若已经成长了，从以前那个只会默默上吊的小媳妇，变成洞悉人心，语带机锋的大掌门。


有人会问，既然她之前柔弱，为何在光明顶张无忌逃婚之时，她不去哀求，反而立刻表现得气势凌人，说出你若走出一步，就再也不必回来这样的话。


那女孩望着父亲的尸身随小船漂走，只是哭泣


这是父亲死后，周芷若的表现。这为她之后的性格体现奠定了基础。她了解生死，就像了解张无忌一样。她深知张无忌武功虽高，其实性格软绵绵的，对他来软的，不会有任何效果，反而对他来硬的，划下个道来，他反倒爱得不行。就像赵敏一直做的那样。这招用在张无忌身上绝对是对的，他从来没真正喜欢过谁，（这一点我会另作分析。）若对手是其他人，周芷若就赢了。只可惜......可怜的周姑娘。害人的张无忌。


如果说“我偏要勉强”是张赵周三角恋的一个大转折点，代表着赵敏顺利上位，那么“我若是问心有愧呢？”这句话则代表周芷若已经开始逆袭，具备了反杀赵敏的能力。从此时起，到全书结果，张无忌一声叹息止。周芷若最终在张无忌心中与赵敏平分秋色，张无忌从此算是被这两个女人缠上了。所以，这位少年的经历告诉我们，永远不要跟智商比你高的女人谈恋爱。

</string>
    <string name="test_catalog">引子\n
谁适合读这本书?\n
我们知道你的大脑在想什么\n
元认知\n
让你的大脑就范\n
技术审校\n
致谢\n
1\n
欢迎来到设计模式世界：设计模式入门\n
模拟鸭子应用\n
Joe想到继承\n
利用接口如何？\n
软件开发的不变真理\n
分开变化和不变部分\n
设计鸭子的行为\n
测试鸭子的代码\n
动态地设置行为\n
封装行为的大局观\n
“有一个”比“是一个”更好\n
策略模式\n
共享模式词汇的威力\n
我如何使用设计模式？\n
设计箱内的工具\n
习题解答\n
2\n
让你的对象知悉现况\n
气象观测站\n
认识观察者模式\n
出版者＋订阅者＝观罕者模式\n
五分钟短剧：观察主题\n
定义观察者模式\n
松耦合的威力\n
设计气象站\n
实现气象站\n
使用Java内建的观察者模式\n
java.util.Observable的黑暗面\n
设计箱内的工具\n
习题解答\n
……\n
3\n
装饰者模式：装饰对象\n
4\n
工厂模式：烘烤OO的精华\n
5\n
单件模式：独一无二的对象\n
6\n
命令模式：封装调用\n
7\n
适配器模式与外观模式：随遇而安\n
8\n
模板方法模式：封装算法\n
9\n
送代器与组合模式：管理良好的集合\n
10\n
状态模式：事物的状态\n
11\n
代理模式：控制对象访问\n
12\n
复合模式：模式中的模式\n
13\n
与设计模式相处：真实世界中的模式\n
A\n
附录A：剩下的模式\n</string>
    <string name="test_summary">《Head First设计模式》(中文版)共有14章，每章都介绍了几个设计模式，完整地涵盖了四人组版本全部23个设计模式。前言先介绍这本书的用法；第1章到第11章陆续介绍的设计模式为Strategy、Observer、Decorator、Abstract Factory、Factory Method、Singleton，Command、Adapter、Facade、TemplateMethod、Iterator、Composite、State、Proxy。最后三章比较特别。第12章介绍如何将两个以上的设计模式结合起来成为新的设计模式(例如著名的MVC模式)，作者称其为复合设计模式(这是作者自创的名称，并非四人组的标准名词)，第13章介绍如何进一步学习设计模式，如何发觉新的设计模式等主题，至于第14章则很快地浏览尚未介绍的设计模式，包括Bridge、Builder、Chain of Responsibility、Flyweight、Interpreter、Mediator、Memento、Prototype，Visitor。第1章还介绍了四个○○基本概念(抽象、封装、继承、多态)，而第1章到第9章也陆续介绍了九个○○原则(Principle)。千万不要轻视这些○○原则，因为每个设计模式背后都包含了几个○○原则的概念。很多时候，在设计时有两难的情况，这时候我们必须回归到○○原则，以方便判断取舍。可以这么说：○○原则是我们的目标，而设计模式是我们的做法。</string>

</resources>
