<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/search_setting_text_appearance"
        android:text="@string/search_way"/>
    <RadioGroup
        android:id="@+id/dialog_search_setting_search_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/dialog_search_setting_search_way_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <RadioButton
            android:id="@+id/dialog_search_setting_search_way_author"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/author"/>
        <RadioButton
            android:id="@+id/dialog_search_setting_search_way_isbn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/isbn"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/search_setting_text_appearance"
        android:text="@string/sort_way"/>
    <RadioGroup
        android:id="@+id/dialog_search_setting_sort_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/dialog_search_setting_sort_way_score"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/score"/>
        <RadioButton
            android:id="@+id/dialog_search_setting_sort_way_publish_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/publish_date"/>
        <RadioButton
            android:id="@+id/dialog_search_setting_sort_way_loan_count"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/loan_count"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/search_setting_text_appearance"
        android:text="@string/sort_order"/>
    <RadioGroup
        android:id="@+id/dialog_search_setting_sort_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/dialog_search_setting_sort_order_asc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/asc"/>
        <RadioButton
            android:id="@+id/dialog_search_setting_sort_order_desc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/desc"/>
    </RadioGroup>
</LinearLayout>