<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/login_background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        app:title="@string/login"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="50dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/transparentWhite">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_login_input_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/account"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>
            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/activity_login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
