<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/book_summary"/>
    <com.ms.square.android.expandabletextview.ExpandableTextView
        android:id="@+id/fragment_book_catalog_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandDrawable="@drawable/ic_keyboard_arrow_down_black_24dp"
        app:collapseDrawable="@drawable/ic_keyboard_arrow_up_black_24dp">
        <include layout="@layout/expandable_view_content"/>
    </com.ms.square.android.expandabletextview.ExpandableTextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/douban_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/douban_rating"/>
        <TextView
            android:id="@+id/fragment_book_catalog_text_rating"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/douban_rating_text"
            android:textSize="30sp"
            android:maxLength="3"
            android:text="9.2"
            android:textColor="?attr/colorPrimary"
            android:gravity="center_horizontal"
            android:layout_alignEnd="@+id/douban_rating_text"
            android:layout_alignParentStart="true" />
        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:mrb_progressTint="?attr/colorPrimary"
            app:mrb_secondaryProgressTint="?attr/colorPrimary"
            android:minHeight="24dp"
            android:maxHeight="24dp"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:layout_toEndOf="@+id/fragment_book_catalog_text_rating"
            android:layout_below="@+id/douban_rating_text"
            android:layout_marginStart="20dp"
            android:id="@+id/materialRatingBar"
            android:layout_above="@+id/textView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text="2269人评价"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/materialRatingBar"
            android:layout_marginStart="5dp"
            android:id="@+id/textView" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/book_catalog"/>
    <com.ms.square.android.expandabletextview.ExpandableTextView
        android:id="@+id/fragment_book_catalog_catalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:maxCollapsedLines="15"
        app:expandDrawable="@drawable/ic_keyboard_arrow_down_black_24dp"
        app:collapseDrawable="@drawable/ic_keyboard_arrow_up_black_24dp">
        <include layout="@layout/expandable_view_content"/>
    </com.ms.square.android.expandabletextview.ExpandableTextView>

</LinearLayout>